// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<table
  className="cf-16x3gyk"
>
  Table
</table>
`;

exports[`should render condensed 1`] = `
<table
  className="cf-16x3gyk"
>
  Table
</table>
`;

exports[`should render extra class names 1`] = `
<table
  className="extra"
>
  Table
</table>
`;

exports[`should render hover 1`] = `
<table
  className="cf-16x3gyk"
>
  Table
</table>
`;

exports[`should render not bordered 1`] = `
<table
  className="cf-16x3gyk"
>
  Table
</table>
`;

exports[`should render striped 1`] = `
<table
  className="cf-16x3gyk"
>
  Table
</table>
`;
